--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"homepage": "https://github.com/rudfoss/react-vue-todo#readme",
 	"devDependencies": {
+		"@types/node": "^17.0.18",
 		"npm-run-all": "^4.1.5"
 	}
 }
