--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
 	"devDependencies": {
 		"@types/node": "^17.0.18",
 		"npm-run-all": "^4.1.5"
+	},
+	"dependencies": {
+		"nanoid": "^3.3.0"
 	}
 }
